--- a/School-supplies.css
+++ b/School-supplies.css
@@ -165,7 +165,7 @@
 }
 
 .u-section-2 .u-image-2 {
-  height: 526px;
+  height: 597px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -226,7 +226,7 @@
   }
 
   .u-section-2 .u-image-2 {
-    height: 423px;
+    height: 480px;
     margin-top: -44px;
   }
 }
@@ -262,7 +262,7 @@
   }
 
   .u-section-2 .u-image-2 {
-    height: 310px;
+    height: 351px;
   }
 }
 
@@ -299,7 +299,7 @@
   }
 
   .u-section-2 .u-image-2 {
-    height: 537px;
+    height: 608px;
     margin-top: -29px;
   }
 }
@@ -325,9 +325,13 @@
     min-height: 578px;
   }
 
+  .u-section-2 .u-container-layout-4 {
+    padding: 14px 8px;
+  }
+
   .u-section-2 .u-image-2 {
-    height: 330px;
-    margin-top: -44px;
+    height: 374px;
+    margin-top: 20px;
   }
 }
 
@@ -1328,6 +1332,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-6 .u-group-1 {
+    min-height: 3338px;
+  }
+
   .u-section-6 .u-container-layout-1 {
     padding-left: 20px;
     padding-right: 20px;
@@ -1335,6 +1343,10 @@
 
   .u-section-6 .u-text-1 {
     font-size: 2.25rem;
+  }
+
+  .u-section-6 .u-btn-1 {
+    margin-top: 7px;
   }
 } .u-section-7 {
   background-image: none;
@@ -1403,7 +1415,6 @@
   grid-template-columns: calc(50% - 7.5px) calc(50% - 7.5px);
   min-height: 201px;
   grid-gap: 15px 15px;
-  grid-auto-columns: calc(50% - 7.5px);
 }
 
 .u-section-7 .u-list-item-1 {
@@ -1475,7 +1486,6 @@
 
   .u-section-7 .u-repeater-1 {
     min-height: 216px;
-    grid-template-columns: repeat(2, calc(50% - 7.5px));
   }
 }
 
@@ -1494,7 +1504,6 @@
 
   .u-section-7 .u-repeater-1 {
     grid-template-columns: 100%;
-    grid-auto-columns: calc(100% - 0px);
   }
 }
 
@@ -1511,10 +1520,6 @@
   .u-section-7 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
-  }
-
-  .u-section-7 .u-repeater-1 {
-    grid-auto-columns: 100%;
   }
 }
 
