--- a/nicepage.css
+++ b/nicepage.css
@@ -41371,12 +41371,23 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 /*end-variables sitestylecss*/
+ .u-header {
+  background-image: none;
+}
+
 .u-header .u-sheet-1 {
-  min-height: 96px;
+  min-height: 55px;
 }
 
 .u-header .u-menu-1 {
-  margin: 20px 20px 20px auto;
+  margin: 0 25px 0 auto;
+}
+
+.u-header .u-nav-1 {
+  font-size: 1rem;
+  letter-spacing: 0px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .u-header .u-nav-2 {
@@ -41385,7 +41396,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 1199px) {
   .u-header .u-menu-1 {
-    margin-right: 20px;
+    margin-right: 25px;
   }
 }
 
