--- a/nicepage.css
+++ b/nicepage.css
@@ -41403,35 +41403,150 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 120px;
+  min-height: 272px;
+}
+
+.u-footer .u-layout-wrap-1 {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+
+.u-footer .u-layout-cell-1 {
+  min-height: 169px;
+}
+
+.u-footer .u-container-layout-1 {
+  padding: 30px 60px;
 }
 
 .u-footer .u-text-1 {
-  width: 417px;
-  margin: 49px auto;
+  margin: 0 auto 0 0;
+}
+
+.u-footer .u-text-2 {
+  margin: 20px 0 0;
+}
+
+.u-footer .u-layout-cell-2 {
+  min-height: 236px;
+}
+
+.u-footer .u-container-layout-2 {
+  padding: 30px 42px;
+}
+
+.u-footer .u-social-icons-1 {
+  height: 48px;
+  min-height: 16px;
+  width: 320px;
+  min-width: 160px;
+  margin: 0 auto;
+}
+
+.u-footer .u-icon-1 {
+  color: rgb(0, 0, 0) !important;
+}
+
+.u-footer .u-icon-2 {
+  color: rgb(0, 0, 0) !important;
+}
+
+.u-footer .u-icon-3 {
+  color: rgb(0, 0, 0) !important;
+}
+
+.u-footer .u-icon-4 {
+  height: 100%;
+  color: rgb(0, 0, 0) !important;
+}
+
+.u-footer .u-icon-5 {
+  height: 100%;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
-    min-height: 99px;
+    min-height: 231px;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 139px;
+  }
+
+  .u-footer .u-layout-cell-2 {
+    min-height: 195px;
   }
 }
 @media (max-width: 991px) {
   .u-footer .u-sheet-1 {
-    min-height: 76px;
+    min-height: 185px;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-footer .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-footer .u-layout-cell-2 {
+    min-height: 149px;
+  }
+
+  .u-footer .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (max-width: 767px) {
   .u-footer .u-sheet-1 {
-    min-height: 57px;
+    min-height: 360px;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 191px;
+  }
+
+  .u-footer .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-footer .u-layout-cell-2 {
+    min-height: 46px;
+  }
+
+  .u-footer .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    margin-left: 0;
   }
 }
 @media (max-width: 575px) {
   .u-footer .u-sheet-1 {
-    min-height: 36px;
+    min-height: 277px;
   }
 
-  .u-footer .u-text-1 {
-    width: 340px;
+  .u-footer .u-layout-cell-1 {
+    min-height: 212px;
+  }
+
+  .u-footer .u-layout-cell-2 {
+    min-height: 120px;
+  }
+
+  .u-footer .u-container-layout-2 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    height: 44px;
+    width: 298px;
   }
 }
 
