--- a/nicepage.css
+++ b/nicepage.css
@@ -41403,35 +41403,146 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 272px;
+  min-height: 914px;
 }
 
 .u-footer .u-layout-wrap-1 {
-  margin-top: 18px;
-  margin-bottom: 18px;
+  margin-top: 49px;
+  margin-bottom: 0;
 }
 
 .u-footer .u-layout-cell-1 {
-  min-height: 169px;
+  min-height: 530px;
 }
 
 .u-footer .u-container-layout-1 {
-  padding: 30px 60px;
+  padding: 30px;
 }
 
 .u-footer .u-text-1 {
-  margin: 0 auto 0 0;
+  font-weight: 400;
+  margin-bottom: 0;
+  margin-top: 0;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-scale: 1;
 }
 
 .u-footer .u-text-2 {
+  font-weight: 700;
+  font-size: 3rem;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
   margin: 20px 0 0;
 }
 
 .u-footer .u-layout-cell-2 {
-  min-height: 236px;
+  min-height: 530px;
+  transition-duration: 0.5s;
+  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
 }
 
 .u-footer .u-container-layout-2 {
+  box-shadow: 0px 0 0 0 rgba(0,0,0,0);
+  text-shadow: 0px 0px 0px rgba(0,0,0,0);
+  padding: 30px;
+}
+
+.u-footer .u-text-3 {
+  font-size: 1.125rem;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+  margin: 58px auto 0 0;
+}
+
+.u-footer .u-list-1 {
+  margin-bottom: 0;
+  margin-top: 20px;
+}
+
+.u-footer .u-repeater-1 {
+  grid-template-columns: calc(50% - 7.5px) calc(50% - 7.5px);
+  min-height: 201px;
+  grid-gap: 15px 15px;
+}
+
+.u-footer .u-list-item-1 {
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+.u-footer .u-container-layout-3 {
+  padding: 10px;
+}
+
+.u-footer .u-text-4 {
+  font-weight: 700;
+  font-size: 4.5rem;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+  margin: 0;
+}
+
+.u-footer .u-text-5 {
+  font-size: 0.875rem;
+  margin: 20px 0 0;
+}
+
+.u-footer .u-list-item-2 {
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+.u-footer .u-container-layout-4 {
+  padding: 10px;
+}
+
+.u-footer .u-text-6 {
+  font-weight: 700;
+  font-size: 4.5rem;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+  margin: 0;
+}
+
+.u-footer .u-text-7 {
+  font-size: 0.875rem;
+  margin: 20px 0 0;
+}
+
+.u-footer .u-layout-wrap-2 {
+  margin-top: 50px;
+  margin-bottom: 49px;
+}
+
+.u-footer .u-layout-cell-3 {
+  min-height: 169px;
+}
+
+.u-footer .u-container-layout-5 {
+  padding: 30px 60px;
+}
+
+.u-footer .u-text-8 {
+  margin: 0 auto 0 0;
+}
+
+.u-footer .u-text-9 {
+  margin: 20px 0 0;
+}
+
+.u-footer .u-layout-cell-4 {
+  min-height: 236px;
+}
+
+.u-footer .u-container-layout-6 {
   padding: 30px 42px;
 }
 
@@ -41443,69 +41554,110 @@ a.u-link.u-text-hover-grey-90:hover {
   margin: 0 auto;
 }
 
-.u-footer .u-icon-1 {
-  color: rgb(0, 0, 0) !important;
-}
-
-.u-footer .u-icon-2 {
-  color: rgb(0, 0, 0) !important;
-}
-
 .u-footer .u-icon-3 {
   color: rgb(0, 0, 0) !important;
 }
 
 .u-footer .u-icon-4 {
-  height: 100%;
   color: rgb(0, 0, 0) !important;
 }
 
 .u-footer .u-icon-5 {
+  color: rgb(0, 0, 0) !important;
+}
+
+.u-footer .u-icon-6 {
+  height: 100%;
+  color: rgb(0, 0, 0) !important;
+}
+
+.u-footer .u-icon-7 {
   height: 100%;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
-    min-height: 231px;
+    min-height: 780px;
+  }
+
+  .u-footer .u-layout-wrap-1 {
+    margin-top: 23px;
   }
 
   .u-footer .u-layout-cell-1 {
-    min-height: 139px;
+    min-height: 437px;
   }
 
   .u-footer .u-layout-cell-2 {
+    min-height: 437px;
+  }
+
+  .u-footer .u-list-1 {
+    margin-top: 46px;
+  }
+
+  .u-footer .u-repeater-1 {
+    min-height: 216px;
+  }
+
+  .u-footer .u-layout-wrap-2 {
+    margin-top: 84px;
+    margin-bottom: 0;
+  }
+
+  .u-footer .u-layout-cell-3 {
+    min-height: 139px;
+  }
+
+  .u-footer .u-layout-cell-4 {
     min-height: 195px;
   }
 }
 @media (max-width: 991px) {
   .u-footer .u-sheet-1 {
-    min-height: 185px;
+    min-height: 426px;
   }
 
   .u-footer .u-layout-cell-1 {
     min-height: 100px;
   }
 
-  .u-footer .u-container-layout-1 {
+  .u-footer .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-footer .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-footer .u-layout-wrap-2 {
+    margin-top: -66px;
+  }
+
+  .u-footer .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-footer .u-container-layout-5 {
     padding-left: 30px;
     padding-right: 30px;
   }
 
-  .u-footer .u-layout-cell-2 {
+  .u-footer .u-layout-cell-4 {
     min-height: 149px;
   }
 
-  .u-footer .u-container-layout-2 {
+  .u-footer .u-container-layout-6 {
     padding-left: 30px;
     padding-right: 30px;
   }
 }
 @media (max-width: 767px) {
   .u-footer .u-sheet-1 {
-    min-height: 360px;
+    min-height: 701px;
   }
 
-  .u-footer .u-layout-cell-1 {
-    min-height: 191px;
+  .u-footer .u-layout-wrap-1 {
+    margin-top: 131px;
   }
 
   .u-footer .u-container-layout-1 {
@@ -41513,11 +41665,30 @@ a.u-link.u-text-hover-grey-90:hover {
     padding-right: 10px;
   }
 
-  .u-footer .u-layout-cell-2 {
+  .u-footer .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-footer .u-layout-wrap-2 {
+    margin-top: -592px;
+    margin-bottom: 49px;
+  }
+
+  .u-footer .u-layout-cell-3 {
+    min-height: 191px;
+  }
+
+  .u-footer .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-footer .u-layout-cell-4 {
     min-height: 46px;
   }
 
-  .u-footer .u-container-layout-2 {
+  .u-footer .u-container-layout-6 {
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -41528,18 +41699,38 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 575px) {
   .u-footer .u-sheet-1 {
-    min-height: 277px;
+    min-height: 618px;
   }
 
-  .u-footer .u-layout-cell-1 {
+  .u-footer .u-layout-wrap-1 {
+    margin-top: 145px;
+  }
+
+  .u-footer .u-text-2 {
+    font-size: 1.875rem;
+  }
+
+  .u-footer .u-text-4 {
+    font-size: 3rem;
+  }
+
+  .u-footer .u-text-6 {
+    font-size: 3rem;
+  }
+
+  .u-footer .u-layout-wrap-2 {
+    margin-top: -584px;
+  }
+
+  .u-footer .u-layout-cell-3 {
     min-height: 212px;
   }
 
-  .u-footer .u-layout-cell-2 {
+  .u-footer .u-layout-cell-4 {
     min-height: 120px;
   }
 
-  .u-footer .u-container-layout-2 {
+  .u-footer .u-container-layout-6 {
     padding-top: 20px;
     padding-bottom: 20px;
   }
@@ -41549,6 +41740,32 @@ a.u-link.u-text-hover-grey-90:hover {
     width: 298px;
   }
 }
+.u-footer .u-layout-cell-2, .u-footer .u-layout-cell-2:before, .u-footer .u-layout-cell-2 > .u-container-layout:before {
+    transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position
+}
+.u-footer .u-layout-cell-2.u-layout-cell-2.u-layout-cell-2:hover {
+    box-shadow: 2px 2px 8px 0px rgba(128,128,128,1) !important;
+    transform: translateX(0px) translateY(px) scale(1) rotate(0deg) !important;
+    text-shadow: 0px 0px 0px rgba(0,0,0,0) !important
+}
+.u-footer .u-layout-cell-2 {
+    border-color: transparent !important
+}
+.u-footer .u-layout-cell-2.u-layout-cell-2.u-layout-cell-2.hover {
+    box-shadow: 2px 2px 8px 0px rgba(128,128,128,1) !important;
+    transform: translateX(0px) translateY(px) scale(1) rotate(0deg) !important;
+    text-shadow: 0px 0px 0px rgba(0,0,0,0) !important
+}
+.u-footer .u-layout-cell-2 {
+    border-color: transparent !important
+}
+.u-footer .u-container-layout:hover .u-layout-cell-2 {
+    transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important
+}
+.u-container-layout.hover .u-footer .u-layout-cell-2 {
+    transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important
+} 
+
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
